--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,11 +11,15 @@ option(COMPILE_FOR_RV1126_SNAPSHOT "compile for rv1126 snapshot" OFF)
 option(COMPILE_FOR_RK3588 "compile for rk3588 ipc" OFF)
 option(COMPILE_FOR_RK3588_MULTI_IPC "compile for rk3588 multi-ipc" OFF)
 
+set(COMPILER_PATH "/home/ubuntu/rv1106_sdk_0.0.3/rv1106/tools/linux/toolchain/arm-rockchip830-linux-uclibcgnueabihf/bin/")
+set(RKIPC_CROSS_COMPILE "arm-rockchip830-linux-uclibcgnueabihf")
+set(CMAKE_C_COMPILER ${COMPILER_PATH}${RKIPC_CROSS_COMPILE}-gcc)
+set(CMAKE_CXX_COMPILER ${COMPILER_PATH}${RKIPC_CROSS_COMPILE}-g++)
 
 if(RKIPC_CROSS_COMPILE)
 message(STATUS "CROSS COMPILE TOOL: ${RKIPC_CROSS_COMPILE}")
 set (CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -Wl,-rpath-link,${PROJECT_SOURCE_DIR}/lib/${RKIPC_CROSS_COMPILE}")
-set (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wl,-rpath-link,${PROJECT_SOURCE_DIR}/lib/${RKIPC_CROSS_COMPILE}")
+set (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11 -Wl,-rpath-link,${PROJECT_SOURCE_DIR}/lib/${RKIPC_CROSS_COMPILE}")
 endif()
 
 if(COMPILE_FOR_RV1106_IPC)
