--- a/src/rv1106_ipc/CMakeLists.txt
+++ b/src/rv1106_ipc/CMakeLists.txt
@@ -16,6 +16,7 @@ include_directories(${PROJECT_SOURCE_DIR}/./include
 aux_source_directory(./ SRCS)
 aux_source_directory(audio SRCS)
 aux_source_directory(video SRCS)
+aux_source_directory(npu SRCS)
 aux_source_directory(${PROJECT_SOURCE_DIR}/common/isp/rv1106 SRCS)
 aux_source_directory(server SRCS)
 aux_source_directory(${PROJECT_SOURCE_DIR}/common/ SRCS)
@@ -31,10 +32,13 @@ aux_source_directory(${PROJECT_SOURCE_DIR}/common/rockiva SRCS)
 aux_source_directory(${PROJECT_SOURCE_DIR}/common/event SRCS)
 aux_source_directory(${PROJECT_SOURCE_DIR}/common/region_clip SRCS)
 
+message(${PROJECT_SOURCE_DIR}/common/network)
+message(${PROJECT_SOURCE_DIR}/src/rv1106_ipc/include/rkaiq/common)
 include_directories(audio
 					${PROJECT_SOURCE_DIR}/common/isp/rv1106
 					video
 					server
+					npu
 					${PROJECT_SOURCE_DIR}/common
 					${PROJECT_SOURCE_DIR}/common/socket_server
 					${PROJECT_SOURCE_DIR}/common/rtsp
@@ -49,9 +53,28 @@ include_directories(audio
 					${PROJECT_SOURCE_DIR}/common/rockiva
 					${PROJECT_SOURCE_DIR}/common/event
 					${PROJECT_SOURCE_DIR}/common/region_clip
+					${PROJECT_SOURCE_DIR}/src/rv1106_ipc/include
+					${PROJECT_SOURCE_DIR}/src/rv1106_ipc/include/rga
+					${PROJECT_SOURCE_DIR}/src/rv1106_ipc/include/rkaiq
+					${PROJECT_SOURCE_DIR}/src/rv1106_ipc/include/rkaiq/algos
+					${PROJECT_SOURCE_DIR}/src/rv1106_ipc/include/rkaiq/common
+					${PROJECT_SOURCE_DIR}/src/rv1106_ipc/include/rkaiq/ipc_server
+					${PROJECT_SOURCE_DIR}/src/rv1106_ipc/include/rkaiq/iq_parser
+					${PROJECT_SOURCE_DIR}/src/rv1106_ipc/include/rkaiq/iq_parser_v2
+					${PROJECT_SOURCE_DIR}/src/rv1106_ipc/include/rkaiq/xcore
+					${PROJECT_SOURCE_DIR}/src/rv1106_ipc/include/rkaiq/uAPI2
+					${PROJECT_SOURCE_DIR}/src/rv1106_ipc/include/rockchip
+					${PROJECT_SOURCE_DIR}/src/rv1106_ipc/include/rockiva
+					${PROJECT_SOURCE_DIR}/src/rv1106_ipc/include/rockive
+					/home/ubuntu/rv1106_sdk_0.0.3/rv1106/rknpu2/runtime/RV1106/Linux/librknn_api/include
+					/home/ubuntu/rv1106_sdk_0.0.3/rv1106/rknpu2/examples/3rdparty
 					)
 
 link_directories(${PROJECT_SOURCE_DIR}/lib/arm-rockchip830-linux-uclibcgnueabihf)
+link_directories(/home/ubuntu/rv1106_sdk_0.0.3/rv1106/media/out/lib)
+link_directories(/home/ubuntu/rv1106_sdk_0.0.3/rv1106/rknpu2/runtime/RV1106/Linux/librknn_api/armhf)
+set (CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -Wl,--allow-shlib-undefined")
+set (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wl,--allow-shlib-undefined")
 
 add_definitions(-DISP_HW_V32)
 #add_definitions(-g -ggdb)
@@ -62,7 +85,8 @@ add_definitions(-Os)
 # link_libraries(asan)
 
 add_executable(${PROJECT_NAME} ${SRCS})
-target_link_libraries(${PROJECT_NAME} pthread rockit rkaiq rtsp wpa_client m rkmuxer rkfsmk freetype rockiva iconv rga)
+# target_link_libraries(${PROJECT_NAME} pthread rockit rkaiq rtsp wpa_client m rkmuxer rkfsmk freetype rockiva iconv)
+target_link_libraries(${PROJECT_NAME} pthread rockit rkaiq rtsp wpa_client m rkmuxer rkfsmk freetype rockiva iconv rga rknn_api)
 
 install(TARGETS ${PROJECT_NAME} RUNTIME DESTINATION bin)
 install(FILES rkipc-300w.ini DESTINATION share)
